--- a/application/static/index.css
+++ b/application/static/index.css
@@ -102,3 +102,26 @@ body {
     background-color: #007bff;
     color: #fff;
 }
+.box{
+    padding: 24px;
+    background-color: aliceblue;
+    border-radius: 24px;
+    border: 1px solid black;
+    width: 500px;
+    height: 220px;
+}
+.cyan{
+    background-color: aliceblue;
+}
+.cyan-link {
+    color: blue;
+}
+.footer {
+position: fixed;
+bottom: 0;
+width: 100%;
+padding: 10px;
+}
+body {
+    background-color: #fff; /* Set the background color to white */
+}
