--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,48 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<title>TicketShow</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/static/index.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-	<title>Login Page</title>
+  <link rel="stylesheet" href="/static/index.css">
+  <style>
+		.box{
+			height: auto;
+      width: auto;
+		}
+	</style>
 </head>
 <body>
-<h1>Login</h1>
-<br>
-
-<div class="card-group">
-	<div class="card">
-	  <div class="card-body">
-		<h5 class="card-title">User Login</h5>
-		<p class="card-text">Click here to login as a user</p>
-		<a href = "/userLogin">
-			<button type="button" class="btn btn-primary">Login</button>
-		</a>
-	  </div>
-	</div>
-	<div class="card">
-	  <div class="card-body">
-		<h5 class="card-title">User Register</h5>
-		<p class="card-text">Click here for new user registration</p>
-		<a href = "/register">
-			<button type="button" class="btn btn-primary">Register</button>
-		</a>
-	  </div>
-	</div>
-	<div class="card">
-	  <div class="card-body">
-		<h5 class="card-title">Admin Login</h5>
-		<p class="card-text">Click here to login as Admin</p>
-		<a href = "/adminlogin">
-			<button type="button" class="btn btn-primary">Login</button>
-		</a>
-	</div>
+  <div class="jumbotron text-center cyan">
+    <h1>Welcome to TicketShow</h1>
+    <p>This is a Flask Application that implements the features like adding venues, adding shows, buying tickets for the shows, rating the shows, and analytics of the reviews.</p>
   </div>
-
-
+  <div class="container box">
+    <div class="row">
+      <div class="col-sm-4" style="text-align:center">
+        <h3>User Login</h3>
+        <p>Click here to login as a user.</p>
+        <a href="/userLogin">
+        <button type="button" class="btn btn-primary">Login</button>
+        </a>
+      </div>
+      <div class="col-sm-4" style="text-align:center">
+        <h3>User Signup</h3>
+        <p>Click here to signup as a user.</p>
+        <a href="/register">
+        <button type="button" class="btn btn-primary">Signup</button>
+        </a>
+      </div>
+      <div class="col-sm-4" style="text-align:center">
+        <h3>Admin Sign in</h3>
+        <p>Click here to sign in as an admin.</p>
+        <a href="/adminlogin">
+        <button type="button" class="btn btn-primary">Sign in</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <footer class="container-fluid text-center footer">
+    <p>Made with ❤ By Purbendu Halder</p>
+  </footer>
 </body>
 </html>
